Closed Bug 613828 Opened 15 years ago Closed 15 years ago

Intermittent crash [@ nsNodeInfoManager::GetDocument] "/ a11y/accessible/name/test_markup.html | Exited with code 1 during test run", due to an assertion. (other tests affected too)

Categories

(Core :: Disability Access APIs, defect)

x86
All
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla2.0b8
Tracking Status
blocking2.0 --- final+

People

(Reporter: philor, Assigned: surkov)

References

()

Details

(Keywords: assertion, intermittent-failure, Whiteboard: [test which aborts the suite] )

Attachments

(1 file)

http://tinderbox.mozilla.org/showlog.cgi?log=Firefox/1290314967.1290317477.14955.gz&fulltext=1 Rev3 Fedora 12 mozilla-central debug test mochitest-other on 2010/11/20 20:49:27 s: talos-r3-fed-003 Can't fit in the whole log, since it's assertion after assertion after assertion after warning after warning after assertion after assertion, even when it's green. Down at the bitter end: 2713 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/name/test_markup.html | Element 'label' test.Wrong name of the accessible for 'td@id='gc' node' - "test4" should equal "test4" ###!!! ASSERTION: Can only call this on frames that have been reflowed: '!(GetStateBits() & NS_FRAME_FIRST_REFLOW)', file /builds/moz2_slave/mozilla-central-linux-debug/build/layout/generic/nsTextFrameThebes.cpp, line 2208 nsTextFrame::GetTrimmedOffsets [layout/generic/nsTextFrameThebes.cpp:2209] nsTextFrame::GetRenderedText [layout/generic/nsTextFrameThebes.cpp:7019] nsAccessibilityService::GetOrCreateAccessible [accessible/src/base/nsAccessibilityService.cpp:951] nsAccTreeWalker::GetNextChildInternal [accessible/src/base/nsAccTreeWalker.cpp:119] nsAccTreeWalker::GetNextChild [accessible/src/base/nsAccTreeWalker.h:65] nsAccessible::CacheChildren [accessible/src/base/nsAccessible.cpp:3181] nsAccessible::EnsureChildren [accessible/src/base/nsAccessible.cpp:3229] nsAccessibilityService::GetAccessibleByRule [accessible/src/base/nsAccessibilityService.cpp:1289] nsAccessibilityService::GetAccessibleInWeakShell [accessible/src/base/nsAccessibilityService.h:167] nsDocAccessible::UpdateTreeInternal [accessible/src/base/nsDocAccessible.cpp:1915] nsDocAccessible::UpdateTree [accessible/src/base/nsDocAccessible.cpp:1487] nsAccessibilityService::ContentRangeInserted [accessible/src/base/nsAccessibilityService.cpp:507] nsCSSFrameConstructor::ContentRangeInserted [layout/base/nsCSSFrameConstructor.cpp:7316] nsCSSFrameConstructor::ContentInserted [layout/base/nsCSSFrameConstructor.cpp:6783] nsCSSFrameConstructor::ReframeTextIfNeeded [layout/base/nsCSSFrameConstructor.cpp:6160] nsCSSFrameConstructor::ContentRemoved [layout/base/nsCSSFrameConstructor.cpp:7578] PresShell::ContentRemoved [layout/base/nsPresShell.cpp:5154] nsNodeUtils::ContentRemoved [content/base/src/nsNodeUtils.cpp:194] nsINode::doRemoveChildAt [content/base/src/nsGenericElement.cpp:3695] nsGenericElement::RemoveChildAt [content/base/src/nsGenericElement.cpp:3637] nsINode::RemoveChild [nsINode.h:485] nsIDOMNode_RemoveChild [dom_quickstubs.cpp:6013] UNKNOWN 0x77f3c24 js::mjit::EnterMethodJIT [js/src/methodjit/MethodJIT.cpp:745] CheckStackAndEnterMethodJIT [js/src/methodjit/MethodJIT.cpp:770] js::mjit::JaegerShot [js/src/methodjit/MethodJIT.cpp:788] js::RunScript [js/src/jsinterp.cpp:654] js::Invoke [js/src/jsinterp.cpp:737] js::ExternalInvoke [js/src/jsinterp.cpp:858] js::ExternalInvoke [js/src/jsinterp.h:955] JS_CallFunctionValue [js/src/jsapi.cpp:4973] nsJSContext::CallEventHandler [dom/base/nsJSEnvironment.cpp:2177] nsGlobalWindow::RunTimeout [dom/base/nsGlobalWindow.cpp:8871] nsGlobalWindow::TimerCallback [dom/base/nsGlobalWindow.cpp:9219] nsTimerImpl::Fire [xpcom/threads/nsTimerImpl.cpp:425] nsTimerEvent::Run [xpcom/threads/nsTimerImpl.cpp:519] nsThread::ProcessNextEvent [xpcom/threads/nsThread.cpp:626] NS_ProcessNextEvent_P [nsThreadUtils.cpp:250] mozilla::ipc::MessagePump::Run [ipc/glue/MessagePump.cpp:110] MessageLoop::RunInternal [ipc/chromium/src/base/message_loop.cc:220] MessageLoop::RunHandler [ipc/chromium/src/base/message_loop.cc:203] MessageLoop::Run [ipc/chromium/src/base/message_loop.cc:176] nsBaseAppShell::Run [widget/src/xpwidgets/nsBaseAppShell.cpp:187] nsAppStartup::Run [toolkit/components/startup/src/nsAppStartup.cpp:191] XRE_main [toolkit/xre/nsAppRunner.cpp:3691] main [browser/app/nsBrowserApp.cpp:158] libc.so.6 + 0x16bb6 WARNING: Bad accessible tree!: file /builds/moz2_slave/mozilla-central-linux-debug/build/accessible/src/base/nsAccessible.cpp, line 2845 ###!!! ASSERTION: No accessible parent for valid accessible!: 'parent', file /builds/moz2_slave/mozilla-central-linux-debug/build/accessible/src/base/nsAccessible.cpp, line 2854 nsAccessible::GetParent [accessible/src/base/nsAccessible.cpp:2855] nsAccessible::IsHyperLink [accessible/src/base/nsAccessible.cpp:2959] nsAccessibleWrap::CreateMaiInterfaces [accessible/src/atk/nsAccessibleWrap.cpp:456] nsAccessibleWrap::GetNativeInterface [accessible/src/atk/nsAccessibleWrap.cpp:363] nsAccessibleWrap::GetAtkObject [accessible/src/atk/nsAccessibleWrap.cpp:394] nsAccessibleWrap::FirePlatformEvent [accessible/src/atk/nsAccessibleWrap.cpp:1060] nsAccessibleWrap::HandleAccEvent [accessible/src/atk/nsAccessibleWrap.cpp:1049] nsEventShell::FireEvent [accessible/src/base/nsEventShell.cpp:66] nsDocAccessible::ProcessPendingEvent [accessible/src/base/nsDocAccessible.cpp:1890] nsAccEventQueue::WillRefresh [accessible/src/base/nsEventShell.cpp:212] nsRefreshDriver::Notify [layout/base/nsRefreshDriver.cpp:256] nsTimerImpl::Fire [xpcom/threads/nsTimerImpl.cpp:428] nsTimerEvent::Run [xpcom/threads/nsTimerImpl.cpp:519] nsThread::ProcessNextEvent [xpcom/threads/nsThread.cpp:626] NS_ProcessNextEvent_P [nsThreadUtils.cpp:250] mozilla::ipc::MessagePump::Run [ipc/glue/MessagePump.cpp:110] MessageLoop::RunInternal [ipc/chromium/src/base/message_loop.cc:220] MessageLoop::RunHandler [ipc/chromium/src/base/message_loop.cc:203] MessageLoop::Run [ipc/chromium/src/base/message_loop.cc:176] nsBaseAppShell::Run [widget/src/xpwidgets/nsBaseAppShell.cpp:187] nsAppStartup::Run [toolkit/components/startup/src/nsAppStartup.cpp:191] XRE_main [toolkit/xre/nsAppRunner.cpp:3691] main [browser/app/nsBrowserApp.cpp:158] libc.so.6 + 0x16bb6 WARNING: Bad accessible tree!: file /builds/moz2_slave/mozilla-central-linux-debug/build/accessible/src/base/nsAccessible.cpp, line 2845 ###!!! ASSERTION: No accessible parent for valid accessible!: 'parent', file /builds/moz2_slave/mozilla-central-linux-debug/build/accessible/src/base/nsAccessible.cpp, line 2854 nsAccessible::GetParent [accessible/src/base/nsAccessible.cpp:2855] getIndexInParentCB [accessible/src/atk/nsAccessibleWrap.cpp:903] nsAccessibleWrap::FireAtkShowHideEvent [accessible/src/atk/nsAccessibleWrap.cpp:1381] nsAccessibleWrap::FirePlatformEvent [accessible/src/atk/nsAccessibleWrap.cpp:1239] nsAccessibleWrap::HandleAccEvent [accessible/src/atk/nsAccessibleWrap.cpp:1049] nsEventShell::FireEvent [accessible/src/base/nsEventShell.cpp:66] nsDocAccessible::ProcessPendingEvent [accessible/src/base/nsDocAccessible.cpp:1890] nsAccEventQueue::WillRefresh [accessible/src/base/nsEventShell.cpp:212] nsRefreshDriver::Notify [layout/base/nsRefreshDriver.cpp:256] nsTimerImpl::Fire [xpcom/threads/nsTimerImpl.cpp:428] nsTimerEvent::Run [xpcom/threads/nsTimerImpl.cpp:519] nsThread::ProcessNextEvent [xpcom/threads/nsThread.cpp:626] NS_ProcessNextEvent_P [nsThreadUtils.cpp:250] mozilla::ipc::MessagePump::Run [ipc/glue/MessagePump.cpp:110] MessageLoop::RunInternal [ipc/chromium/src/base/message_loop.cc:220] MessageLoop::RunHandler [ipc/chromium/src/base/message_loop.cc:203] MessageLoop::Run [ipc/chromium/src/base/message_loop.cc:176] nsBaseAppShell::Run [widget/src/xpwidgets/nsBaseAppShell.cpp:187] nsAppStartup::Run [toolkit/components/startup/src/nsAppStartup.cpp:191] XRE_main [toolkit/xre/nsAppRunner.cpp:3691] main [browser/app/nsBrowserApp.cpp:158] libc.so.6 + 0x16bb6 WARNING: Bad accessible tree!: file /builds/moz2_slave/mozilla-central-linux-debug/build/accessible/src/base/nsAccessible.cpp, line 2845 ###!!! ASSERTION: No accessible parent for valid accessible!: 'parent', file /builds/moz2_slave/mozilla-central-linux-debug/build/accessible/src/base/nsAccessible.cpp, line 2854 nsAccessible::GetParent [accessible/src/base/nsAccessible.cpp:2855] getParentCB [accessible/src/atk/nsAccessibleWrap.cpp:842] nsAccessibleWrap::FireAtkShowHideEvent [accessible/src/atk/nsAccessibleWrap.cpp:1382] nsAccessibleWrap::FirePlatformEvent [accessible/src/atk/nsAccessibleWrap.cpp:1239] nsAccessibleWrap::HandleAccEvent [accessible/src/atk/nsAccessibleWrap.cpp:1049] nsEventShell::FireEvent [accessible/src/base/nsEventShell.cpp:66] nsDocAccessible::ProcessPendingEvent [accessible/src/base/nsDocAccessible.cpp:1890] nsAccEventQueue::WillRefresh [accessible/src/base/nsEventShell.cpp:212] nsRefreshDriver::Notify [layout/base/nsRefreshDriver.cpp:256] nsTimerImpl::Fire [xpcom/threads/nsTimerImpl.cpp:428] nsTimerEvent::Run [xpcom/threads/nsTimerImpl.cpp:519] nsThread::ProcessNextEvent [xpcom/threads/nsThread.cpp:626] NS_ProcessNextEvent_P [nsThreadUtils.cpp:250] mozilla::ipc::MessagePump::Run [ipc/glue/MessagePump.cpp:110] MessageLoop::RunInternal [ipc/chromium/src/base/message_loop.cc:220] MessageLoop::RunHandler [ipc/chromium/src/base/message_loop.cc:203] MessageLoop::Run [ipc/chromium/src/base/message_loop.cc:176] nsBaseAppShell::Run [widget/src/xpwidgets/nsBaseAppShell.cpp:187] nsAppStartup::Run [toolkit/components/startup/src/nsAppStartup.cpp:191] XRE_main [toolkit/xre/nsAppRunner.cpp:3691] main [browser/app/nsBrowserApp.cpp:158] libc.so.6 + 0x16bb6 WARNING: NS_ENSURE_TRUE(parentObject) failed: file /builds/moz2_slave/mozilla-central-linux-debug/build/accessible/src/atk/nsAccessibleWrap.cpp, line 1383 --DOMWINDOW == 26 (0xa6956c8) [serial = 103] [outer = (nil)] [url = chrome://mochitests/content/a11y/accessible/events/test_tree.xul] --DOMWINDOW == 25 (0x9e8edb0) [serial = 105] [outer = (nil)] [url = chrome://mochitests/content/a11y/accessible/hyperlink/test_general.html] --DOMWINDOW == 24 (0xa9322e0) [serial = 106] [outer = (nil)] [url = chrome://mochitests/content/a11y/accessible/hyperlink/test_general.xul] --DOMWINDOW == 23 (0xb0a76a8) [serial = 89] [outer = (nil)] [url = chrome://mochitests/content/a11y/accessible/events/test_scroll.xul] --DOMWINDOW == 22 (0xaa73688) [serial = 93] [outer = (nil)] [url = file:///tmp/tmp6S5rfK/mochikit.tmp/scroll.html#link1] --DOMWINDOW == 21 (0xad2a740) [serial = 101] [outer = (nil)] [url = about:blank] --DOMWINDOW == 20 (0xaadde50) [serial = 97] [outer = 0x9ca62d0] [url = about:blank] --DOMWINDOW == 19 (0x9ca6310) [serial = 95] [outer = (nil)] [url = about:blank] --DOCSHELL 0xadaf270 == 7 --DOMWINDOW == 18 (0xb0f1498) [serial = 107] [outer = 0x9afd9a0] [url = chrome://mochitests/content/a11y/accessible/name/test_button.html] --DOMWINDOW == 17 (0x9c372f8) [serial = 112] [outer = 0x9afd9a0] [url = chrome://mochitests/content/a11y/accessible/name/test_link.html] --DOMWINDOW == 16 (0xb3a6258) [serial = 110] [outer = 0xa4741d8] [url = about:blank] --DOMWINDOW == 15 (0xa474218) [serial = 109] [outer = (nil)] [url = about:blank] NEXT ERROR TEST-UNEXPECTED-FAIL | chrome://mochitests/content/a11y/accessible/name/test_markup.html | Exited with code 1 during test run INFO | automation.py | Application ran for: 0:01:49.323424 INFO | automation.py | Reading PID log: /tmp/tmpzczGH7pidlog PROCESS-CRASH | chrome://mochitests/content/a11y/accessible/name/test_markup.html | application crashed (minidump found) Operating system: Linux 0.0.0 Linux 2.6.31.5-127.fc12.i686.PAE #1 SMP Sat Nov 7 21:25:57 EST 2009 i686 CPU: x86 GenuineIntel family 6 model 23 stepping 10 2 CPUs Crash reason: SIGSEGV Crash address: 0xd8d8d8e4 Thread 0 (crashed) 0 libxul.so!nsNodeInfoManager::GetDocument [nsNodeInfoManager.h : 116 + 0x3] eip = 0x01247d04 esp = 0xbfb1b49c ebp = 0xbfb1b49c ebx = 0x03464a34 esi = 0xbfb1b534 edi = 0x00000000 eax = 0xd8d8d8d8 ecx = 0x03464a34 edx = 0xbfb1b534 efl = 0x00210282 Found by: given as instruction pointer in context 1 libxul.so!nsINodeInfo::GetDocument [nsINodeInfo.h : 289 + 0xd] eip = 0x01247d1e esp = 0xbfb1b4a4 ebp = 0xbfb1b4a8 ebx = 0x03464a34 esi = 0xbfb1b534 edi = 0x00000000 Found by: call frame info 2 libxul.so!nsINode::GetOwnerDoc [nsINode.h : 428 + 0x15] eip = 0x01248148 esp = 0xbfb1b4b0 ebp = 0xbfb1b4b8 ebx = 0x03464a34 esi = 0xbfb1b534 edi = 0x00000000 Found by: call frame info 3 libxul.so!nsCoreUtils::GetPresShellFor [nsCoreUtils.h:baa51e6d4a15 : 259 + 0xa] eip = 0x023941e6 esp = 0xbfb1b4c0 ebp = 0xbfb1b4d8 ebx = 0x03464a34 esi = 0xbfb1b534 edi = 0x00000000 Found by: call frame info 4 libxul.so!nsCoreUtils::GetWeakShellFor [nsCoreUtils.h:baa51e6d4a15 : 265 + 0xa] eip = 0x023b1670 esp = 0xbfb1b4e0 ebp = 0xbfb1b508 ebx = 0x03464a34 esi = 0xbfb1b534 edi = 0x00000000 Found by: call frame info 5 libxul.so!nsAccessibilityService::GetAccessible [nsAccessibilityService.cpp:baa51e6d4a15 : 809 + 0x11] eip = 0x023b34b4 esp = 0xbfb1b510 ebp = 0xbfb1b538 ebx = 0x03464a34 esi = 0x0a75c898 edi = 0x00000000 Found by: call frame info ...
http://tinderbox.mozilla.org/showlog.cgi?log=SeaMonkey/1290309487.1290312310.27616.gz&fulltext=1 Linux comm-central-trunk debug test mochitest-other on 2010/11/20 19:18:07 http://tinderbox.mozilla.org/showlog.cgi?log=SeaMonkey/1290318115.1290320619.25774.gz Linux comm-central-trunk debug test mochitest-other on 2010/11/20 21:41:55
(In reply to comment #1) > http://tinderbox.mozilla.org/showlog.cgi?log=SeaMonkey/1290318115.1290320619.25774.gz > Linux comm-central-trunk debug test mochitest-other on 2010/11/20 21:41:55 reports this assertion 1239 times, in various (= all!?) tests! (MacOSX doesn't run a11y tests.) http://tinderbox.mozilla.org/showlog.cgi?log=SeaMonkey/1290283775.1290288913.31279.gz&fulltext=1 WINNT 5.2 comm-central-trunk debug test mochitest-other on 2010/11/20 12:09:35 reports this assertion 266 times...
blocking2.0: --- → ?
OS: Linux → All
Summary: Intermittent crash [@ nsNodeInfoManager::GetDocument] / a11y/accessible/name/test_markup.html | Exited with code 1 during test run → Intermittent crash [@ nsNodeInfoManager::GetDocument] "/ a11y/accessible/name/test_markup.html | Exited with code 1 during test run", due to an assertion. (other tests affected too)
Attached patch patchSplinter Review
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #492150 - Flags: superreview?(neil)
Attachment #492150 - Flags: review?(fherrera)
Assignee: surkov.alexander → nobody
Status: ASSIGNED → NEW
Whiteboard: [orange] → [test which aborts the suite] [orange]
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #492150 - Flags: superreview?(neil) → superreview+
Approved blocking. Patch looks good.
blocking2.0: ? → final+
Comment on attachment 492150 [details] [diff] [review] patch After some nice reading about nsCOMPtr, re=me. Thanks!
Attachment #492150 - Flags: review?(fherrera) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
Whiteboard: [test which aborts the suite] [orange] → [test which aborts the suite]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: