Bug 613828 - Intermittent crash [@ nsNodeInfoManager::GetDocument] '/ a11y/accessible/name/test_markup.html | Exited with code 1 during test run', due to an assertion. (other tests affected too), r=fer, sr=neil, a=final+